[package]
name = "skybox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-multithreading = []

[dependencies]
png = "0.16.7"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
configparser = "3.0.1"

[profile.release-lto]
inherits = "release"
lto = true
